--- a/pom.xml
+++ b/pom.xml
@@ -76,5 +76,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>3.0.4</version>
+        </dependency>
     </dependencies>
 </project>
