--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <springdoc.version>1.6.14</springdoc.version>
+        <springdoc.version>1.6.15</springdoc.version>
         <swagger-ui.version>4.15.5</swagger-ui.version>
     </properties>
     <parent>
@@ -32,10 +32,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>3.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
+            <version>3.0.3</version>
         </dependency>
           <!--SpringDoc dependencies -->
         <dependency>
@@ -52,10 +54,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.14.2</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.14.2</version>
         </dependency>
         <dependency>
             <groupId>org.openapitools</groupId>
@@ -66,25 +70,28 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+            <version>3.0.4</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <version>2.15.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>3.1.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.4.2.Final</version> <!-- Verwenden Sie die aktuelle MapStruct-Version -->
+            <version>1.5.3.Final</version> <!-- Verwenden Sie die aktuelle MapStruct-Version -->
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.22</version> <!-- Aktuelle Version überprüfen und aktualisieren -->
+            <version>1.18.26</version> <!-- Aktuelle Version überprüfen und aktualisieren -->
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -92,8 +99,11 @@
             <artifactId>javax.persistence-api</artifactId>
             <version>2.2</version> <!-- Use the appropriate version -->
         </dependency>
-
-
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>3.1.3</version>
+        </dependency>
 
 
     </dependencies>
