--- a/paperless-main/pom.xml
+++ b/paperless-main/pom.xml
@@ -102,5 +102,10 @@
             <artifactId>spring-data-commons</artifactId>
             <version>3.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
