corrected postgres user
Post request still not working from docker container

--- a/paperless-main/docker-compose.yml
+++ b/paperless-main/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     image: postgres:latest
     environment:
       POSTGRES_DB: swen3-db
-      POSTGRES_USER: root
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
     volumes:
       - postgres_data:/var/lib/postgresql/data
