--- a/paperless-main/src/main/resources/application.properties
+++ b/paperless-main/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8088
 spring.jackson.date-format=org.openapitools.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
-spring.datasource.url=jdbc:postgresql://localhost:5432/swen3-db
+#spring.datasource.url=jdbc:postgresql://localhost:5432/swen3-db
+spring.datasource.url=jdbc:postgresql://postgres:5432/swen3-db
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
