--- a/paperless-main/src/main/resources/application.properties
+++ b/paperless-main/src/main/resources/application.properties
@@ -16,3 +16,15 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+
+
+#spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.localhost=rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=user
+spring.rabbitmq.password=password
+
+rabbitmq.exchange=paperless.direct.exchange
+rabbitmq.queue=paperless.documents.queue
+rabbitmq.routingkey=paperless.documents.key
+
