--- a/paperless-main/src/main/resources/application.properties
+++ b/paperless-main/src/main/resources/application.properties
@@ -24,7 +24,8 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=user
 spring.rabbitmq.password=password
 
-rabbitmq.exchange=paperless.direct.exchange
+rabbitmq.exchange=amq.direct
 rabbitmq.queue=paperless.documents.queue
 rabbitmq.routingkey=paperless.documents.key
+
 
