--- a/paperless-main/Dockerfile
+++ b/paperless-main/Dockerfile
@@ -1,11 +1,17 @@
 FROM amazoncorretto:17-alpine-jdk
 WORKDIR /app
+
+# Create a dummy file to invalidate the cache
+RUN echo 'version 1' > version.txt
+
 # Install Maven (if not already installed)
 RUN apk --no-cache add maven
-# copy sourcecode
+
+# Copy source code
 COPY . /app
-# Build the application --> skit tests for now
+
+# Build the application --> skip tests for now
 RUN mvn package -DskipTests
 
 EXPOSE 8088
-ENTRYPOINT ["java","-jar","target/openapi-spring-1.0.jar"]
+ENTRYPOINT ["java", "-jar", "target/openapi-spring-1.0.jar"]
