MinIO upload works

--- a/paperless-main/src/main/resources/application.properties
+++ b/paperless-main/src/main/resources/application.properties
@@ -28,4 +28,8 @@ rabbitmq.exchange=amq.direct
 rabbitmq.queue=paperless.documents.queue
 rabbitmq.routingkey=paperless.documents.key
 
-
+#für docker http://minio:9000
+minio.url=http://localhost:9000/
+minio.access-key=minio-image
+minio.secret-key=minio-image-pass
+minio.bucket-name=mein-bucket
