--- a/paperless-main/pom.xml
+++ b/paperless-main/pom.xml
@@ -139,5 +139,20 @@
             <artifactId>spring-rabbit</artifactId>
         </dependency>
 
+        <!--MinIO-->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.1</version>
+        </dependency>
+
+
+
     </dependencies>
 </project>
