All containers can run and communicate again

--- a/paperless-main/src/main/resources/application.properties
+++ b/paperless-main/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
 
 #Hier switchen falls du es im Docker-Container oder auf der IDE(Lokal) haben willst
-spring.datasource.url=jdbc:postgresql://localhost:5432/swen3-db
-#spring.datasource.url=jdbc:postgresql://postgres:5432/swen3-db
+#spring.datasource.url=jdbc:postgresql://localhost:5432/swen3-db
+spring.datasource.url=jdbc:postgresql://postgres:5432/swen3-db
 
 
 
@@ -18,8 +18,8 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.format_sql=true
 
 
-#spring.rabbitmq.host=rabbitmq
-spring.rabbitmq.localhost=rabbitmq
+spring.rabbitmq.host=rabbitmq
+#spring.rabbitmq.localhost=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=user
 spring.rabbitmq.password=password
@@ -29,7 +29,7 @@ rabbitmq.queue=paperless.documents.queue
 rabbitmq.routingkey=paperless.documents.key
 
 #für docker http://minio:9000
-minio.url=http://localhost:9000/
+minio.url=http://minio:9000/
 minio.access-key=minio-image
 minio.secret-key=minio-image-pass
 minio.bucket-name=mein-bucket
