OCR-Tesseract (WIP)

--- a/paperless-main/OCR-mapper/OCR-mapper/src/main/resources/application.properties
+++ b/paperless-main/OCR-mapper/OCR-mapper/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+server.port=8082
 
+
+# RabbitMQ-Konfiguration
+#spring.rabbitmq.host=rabbitmq
+# Docker: Oben, lokal: Unten
+spring.rabbitmq.localhost=rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=user
+spring.rabbitmq.password=password
+
+
+
+# MinIO-Konfiguration
+#minio.url=http://minio:9000
+# Docker: Oben; Lokal: Unten
+minio.url=http://localhost:9000
+minio.access-key=minio-image
+minio.secret-key=minio-image-pass
+minio.bucket-name=mein-bucket
