--- a/paperless-main/OCR-mapper/OCR-mapper/build.gradle
+++ b/paperless-main/OCR-mapper/OCR-mapper/build.gradle
@@ -23,10 +23,17 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	compileOnly 'org.projectlombok:lombok'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'net.sourceforge.tess4j:tess4j:4.5.4'
+	// RabbitMQ
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+	// MinIO Client
+	implementation 'io.minio:minio:8.5.7' // Ersetzen Sie VERSION mit der aktuellen Version des MinIO-Clients
+
 }
 
 tasks.named('bootBuildImage') {
