Connection to minio works

--- a/paperless-main/OCR-mapper/OCRMapper/src/main/resources/application.properties
+++ b/paperless-main/OCR-mapper/OCRMapper/src/main/resources/application.properties
@@ -24,3 +24,8 @@ spring.rabbitmq.password=password
 rabbitmq.queue=paperless.documents.queue
 rabbitmq.exchange=amq.direct
 rabbitmq.routingkey=paperless.documents.key
+
+#minio.url=http://minio:9000/
+minio.url=http://localhost:9000/
+minio.accessKey=minio-image
+minio.secretKey=minio-image-pass
