--- a/paperless-main/OCR-mapper/OCRMapper/pom.xml
+++ b/paperless-main/OCR-mapper/OCRMapper/pom.xml
@@ -51,6 +51,17 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>8.5.2</version> <!-- Check for the latest version on Maven Central -->
+		</dependency>
+		<dependency>
+			<groupId>io.minio</groupId>
+			<artifactId>minio</artifactId>
+			<version>8.5.2</version>
+		</dependency>
+
 
 	</dependencies>
 
