File is read correctly through OCRMapper and saved to database

--- a/paperless-main/OCR-mapper/OCRMapper/pom.xml
+++ b/paperless-main/OCR-mapper/OCRMapper/pom.xml
@@ -61,7 +61,20 @@
 			<artifactId>minio</artifactId>
 			<version>8.5.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 
+
+		<!-- Tesseract OCR -->
+		<dependency>
+			<groupId>net.sourceforge.tess4j</groupId>
+			<artifactId>tess4j</artifactId>
+			<version>5.6.0</version> <!-- Use the latest version available -->
+		</dependency>
 
 	</dependencies>
 
