--- a/paperless-main/OCR-mapper/OCRMapper/pom.xml
+++ b/paperless-main/OCR-mapper/OCRMapper/pom.xml
@@ -76,6 +76,25 @@
 			<version>5.6.0</version> <!-- Use the latest version available -->
 		</dependency>
 
+		<!-- ELASTIC SEARCH -->
+		<!-- Spring Boot Starter Web -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<!-- Spring Data Elasticsearch -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+		</dependency>
+
+		<!-- Elasticsearch Client -->
+		<dependency>
+			<groupId>org.elasticsearch.client</groupId>
+			<artifactId>elasticsearch-rest-high-level-client</artifactId>
+			<version>7.17.0</version>
+		</dependency>
 	</dependencies>
 
 
