container + elasticsearch document content
document content is saved in elastic search
all services are running in docker

--- a/paperless-main/OCR-mapper/OCRMapper/src/main/resources/application.properties
+++ b/paperless-main/OCR-mapper/OCRMapper/src/main/resources/application.properties
@@ -29,3 +29,7 @@ rabbitmq.routingkey=paperless.documents.key
 minio.url=http://localhost:9000/
 minio.accessKey=minio-image
 minio.secretKey=minio-image-pass
+
+spring.data.elasticsearch.cluster-name=docker-cluster
+spring.data.elasticsearch.cluster-nodes=elasticsearch:9200
+
