--- a/paperless-main/src/main/resources/application.properties
+++ b/paperless-main/src/main/resources/application.properties
@@ -33,3 +33,7 @@ minio.url=http://minio:9000/
 minio.access-key=minio-image
 minio.secret-key=minio-image-pass
 minio.bucket-name=mein-bucket
+
+
+spring.data.elasticsearch.cluster-name=docker-cluster
+spring.data.elasticsearch.cluster-nodes=elasticsearch:9200
