--- a/paperless-main/docker-compose.yml
+++ b/paperless-main/docker-compose.yml
@@ -12,8 +12,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8088:8088"
-    depends_on:
-      - elasticsearch
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+#    depends_on:
+#      - elasticsearch
   postgres:
     image: postgres:latest
     environment:
@@ -30,13 +32,13 @@ services:
     restart: always
     working_dir: "/minio-image/storage"
     volumes:
-        - ./Storage/minio/storage:/minio-image/storage
+      - ./Storage/minio/storage:/minio-image/storage
     ports:
-        - "9000:9000"
-        - "9001:9001"
+      - "9000:9000"
+      - "9001:9001"
     environment:
-        MINIO_ROOT_USER: minio-image
-        MINIO_ROOT_PASSWORD: minio-image-pass
+      MINIO_ROOT_USER: minio-image
+      MINIO_ROOT_PASSWORD: minio-image-pass
     command: server /minio-image/storage --console-address :9001
   rabbitmq:
     image: "rabbitmq:3-management"
@@ -48,39 +50,39 @@ services:
       - "5672:5672"  # RabbitMQ server
       - "15672:15672"  # RabbitMQ management
 
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.15
-    container_name: elasticsearch
-    environment:
-      - discovery.type=single-node
-      - network.host=0.0.0.0
-      - http.host=0.0.0.0
-      - transport.host=127.0.0.1
-    ports:
-      - "9200:9200"
-    volumes:
-      - esdata1:/usr/share/elasticsearch/data
+  # elasticsearch:
+  #   image: docker.elastic.co/elasticsearch/elasticsearch:7.17.15
+  #   container_name: elasticsearch
+  #   environment:
+  #     - discovery.type=single-node
+  #     - network.host=0.0.0.0
+  #     - http.host=0.0.0.0
+  #     - transport.host=127.0.0.1
+  #   ports:
+  #     - "9200:9200"
+  #   volumes:
+  #     - esdata1:/usr/share/elasticsearch/data
 
-  kibana:
-    image: docker.elastic.co/kibana/kibana:7.17.15
-    container_name: kibana
-    environment:
-      - ELASTICSEARCH_URL=http://elasticsearch:9200
-    ports:
-      - "9092:5601"
-    depends_on:
-      - elasticsearch
+  # kibana:
+  #   image: docker.elastic.co/kibana/kibana:7.17.15
+  #   container_name: kibana
+  #   environment:
+  #     - ELASTICSEARCH_URL=http://elasticsearch:9200
+  #   ports:
+  #     - "9092:5601"
+  #   depends_on:
+  #     - elasticsearch
 
-  ocrservice:
-    build: 
-      dockerfile: Dockerfile
-    ports:
-      - "8090:8090"
-    depends_on:
-      - elasticsearch
-      - rabbitmq
-      - minio
-      - postgres
+  # ocrservice:
+  #   build:
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "8090:8090"
+  #   depends_on:
+  #     - elasticsearch
+  #     - rabbitmq
+  #     - minio
+  #     - postgres
 
 volumes:
   postgres_data:
