--- a/paperless-main/OCR-mapper/OCRMapper/src/main/resources/application.properties
+++ b/paperless-main/OCR-mapper/OCRMapper/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8090
 
 #Hier switchen falls du es im Docker-Container oder auf der IDE(Lokal) haben willst
-spring.datasource.url=jdbc:postgresql://localhost:5432/swen3-db
-#spring.datasource.url=jdbc:postgresql://postgres:5432/swen3-db
+#spring.datasource.url=jdbc:postgresql://localhost:5432/swen3-db
+spring.datasource.url=jdbc:postgresql://postgres:5432/swen3-db
 
 
 
@@ -15,8 +15,8 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.format_sql=true
 
 
-#spring.rabbitmq.host=rabbitmq
-spring.rabbitmq.localhost=rabbitmq
+spring.rabbitmq.host=rabbitmq
+#spring.rabbitmq.localhost=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=user
 spring.rabbitmq.password=password
@@ -25,11 +25,14 @@ rabbitmq.queue=paperless.documents.queue
 rabbitmq.exchange=amq.direct
 rabbitmq.routingkey=paperless.documents.key
 
-#minio.url=http://minio:9000/
-minio.url=http://localhost:9000/
+minio.url=http://minio:9000/
+#minio.url=http://localhost:9000/
 minio.accessKey=minio-image
 minio.secretKey=minio-image-pass
+minio.bucket-name=mein-bucket
+
+
+spring.elasticsearch.uris=http://elasticsearch:9200
+#spring.elasticsearch.uris=http://localhost:9200
 
 spring.data.elasticsearch.cluster-name=docker-cluster
-spring.data.elasticsearch.cluster-nodes=elasticsearch:9200
-
