--- a/paperless-main/OCR-mapper/OCRMapper/pom.xml
+++ b/paperless-main/OCR-mapper/OCRMapper/pom.xml
@@ -82,8 +82,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.elasticsearch.client</groupId>
+			<artifactId>elasticsearch-rest-high-level-client</artifactId>
+			<version>7.17.15</version>
+		</dependency>
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>7.17.15</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 
 	<build>
