--- a/paperless-main/OCR-mapper/OCRMapper/src/main/resources/application.properties
+++ b/paperless-main/OCR-mapper/OCRMapper/src/main/resources/application.properties
@@ -32,7 +32,11 @@ minio.secretKey=minio-image-pass
 minio.bucket-name=mein-bucket
 
 
-spring.elasticsearch.uris=http://elasticsearch:9200
-#spring.elasticsearch.uris=http://localhost:9200
-
 spring.data.elasticsearch.cluster-name=docker-cluster
+spring.data.elasticsearch.repositories.enabled=true
+#elasticsearch.url=localhost:9200
+#spring.data.elasticsearch.cluster-nodes=localhost:9200
+spring.elasticsearch.uris=http://elasticsearch:9200
+
+
+
