Container runs correctly after restart
container crashes in docker compose, since elasticsearch is not ready to accept connections
After restart it works

--- a/paperless-main/OCR-mapper/OCRMapper/Dockerfile
+++ b/paperless-main/OCR-mapper/OCRMapper/Dockerfile
@@ -1,6 +1,12 @@
 # Use an official OpenJDK runtime as a parent image
 FROM openjdk:17-jdk-slim
 
+# Install Tesseract OCR
+RUN apt-get update && apt-get install -y tesseract-ocr
+
+# Set the environment variable TESSDATA_PREFIX
+ENV TESSDATA_PREFIX /usr/share/tesseract-ocr/4.00/tessdata
+
 # Set the working directory inside the container
 WORKDIR /app
 
