added restart to OCRService
OCRService restarts until the elasticsearch container is ready to accept the connection

--- a/paperless-main/docker-compose.yml
+++ b/paperless-main/docker-compose.yml
@@ -92,6 +92,7 @@ services:
       - SPRING_DATA_ELASTICSEARCH_CLUSTERNODES=elasticsearch:9200
     depends_on:
       - elasticsearch
+    restart: unless-stopped
     
 volumes:
   postgres_data:
