--- a/paperless-main/pom.xml
+++ b/paperless-main/pom.xml
@@ -171,6 +171,11 @@
             <artifactId>okhttp</artifactId>
             <version>4.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>7.17.7</version>
+        </dependency>
 
     </dependencies>
 </project>
